@@ -245,6 +245,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #26782: Add STARTUPINFO to subprocess.__all__ on Windows.
+
 - Issue #26404: Add context manager to socketserver.  Patch by Aviv Palivoda.
 
 - Issue #26735: Fix :func:`os.urandom` on Solaris 11.3 and newer when reading
